# DeltaTrack

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TESTING.md  bill_tree.py  conftest.py  diff_bill  diff_bill.py  diff_pdf  diff_pdf.py  discover.py  fetch_bill_archives  fetch_bill_archives.py  fetch_bills  fetch_bills.py  fetch_govinfo.py  parity_check.py  pyproject.toml  render_examples.py  structure_tree.py  test_diff_pdf.py  test_format_html.py  test_pdf_text.py  validation_check.py  validation_sources.py
.github/: pull_request_template.md
bill_index/: README.md  __init__.py  bill_index.py
docs/: bill-publishing.md  bill-structure.md  gpo-render-conventions.md  https-redirect.md  parser-validation.md  web-compare.md
examples/: README.md  hr8752_pdf_diff.html  hr8752_xml_diff.html  index.html
formatters/: adapters.py  canonical.py  diff_html.py  pdf_html.py  text_serializer.py  view_model.py
parsers/: committee_report.py  pdf_anchors.py  pdf_text.py
prototype/: README.md  app.js  generate_samples.py  index.html  styles.css
schema/: canonical-diff.md  canonical-diff.schema.json
scripts/: README.md  compare_differs.py  fetch_test_assets.py  generate_validation_report.py  heading_precision.py  p1_similarity_fixtures.py  p2_catalog_survey.py  p3_prototypes.py  serve_compare.py  ugly_money_table.py
server/: __init__.py  app.py  pdf_compare.py  xml_compare.py
shared/: __init__.py  bill_types.py  http.py  version_stems.py
test_data/: validation_defense.json
tests/: conftest.py  test_bill_tree.py  test_canonical_tree.py  test_committee_report.py  test_corpus_properties.py  test_diff_pdf.py  (+36 more)
(+44 files in other folders)
