[project]
name = "deltatrack"
version = "0.1.0"
description = "Download U.S. bill text from Congress.gov and compare versions structurally"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pypdfium2>=5.8.0",
    "python-dotenv>=1.0",
    # Web service (server/) — wraps the diff engine as a FastAPI app served by uvicorn.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",  # 0.0.18 fixes CVE-2024-53981 (multipart DoS); also the floor pip-audit checks
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "reportlab>=4.5.1",
    "respx>=0.22",
    "ruff==0.15.10",  # pinned exactly so local `ruff format` matches CI (format output varies by version)
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Report unused imports (F401) but never let `ruff check --fix` auto-delete them
# (pre-commit, manual runs, or the editor hook). Otherwise an import added in one
# edit is stripped before its consumer lands in the next. Still flagged at lint time.
unfixable = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests live in tests/ but import the source modules at the repo root.
pythonpath = ["."]
markers = [
    "slow: tests that require real bill XML files (deselect with '-m not slow')",
]

[tool.coverage.run]
# Coverage measures the diff engine, not the tests or fetch tooling.
omit = [
    "tests/*",
    "fetch_bills.py",
    "render_examples.py",
]
